--- a/Themes/Brackets Dark.css
+++ b/Themes/Brackets Dark.css
@@ -189,13 +189,13 @@ cdata {
 identifier.type {
     color: #ddd;
 }
-identifier.type.class {
+identifier.type.class,
+identifier.type.protocol,
+identifier.type.enum,
+identifier.type.union,
+identifier.type.struct {
     color: #b77fdb;
 }
-identifier.type.protocol {}
-identifier.type.enum {}
-identifier.type.union {}
-identifier.type.struct {}
 
 identifier.global,
 identifier.variable,
