--- a/Stylesheets/GitHub dark.css
+++ b/Stylesheets/GitHub dark.css
@@ -1,11 +1,10 @@
-/*dark*/
-
+/* dark */
 body {
   color-scheme: dark;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
-  color: #e6edf3;
+  color: #f0f6fc;
   background-color: #0d1117;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
   font-size: 16px;
@@ -14,8 +13,9 @@ body {
 }
 
 body {
+  box-sizing: border-box;
   margin: 32px;
-  padding: 16px 32px 32px 32px;
+  padding: 45px;
   border: 1px solid #30363d;
   border-radius: 6px;
 }
@@ -57,7 +57,7 @@ body [hidden] {
 
 body a {
   background-color: transparent;
-  color: #2f81f7;
+  color: #4493f8;
   text-decoration: none;
 }
 
@@ -81,12 +81,12 @@ body h1 {
   font-weight: 600;
   padding-bottom: .3em;
   font-size: 2em;
-  border-bottom: 1px solid #21262d;
+  border-bottom: 1px solid #3d444db3;
 }
 
 body mark {
-  background-color: rgba(187,128,9,0.15);
-  color: #e6edf3;
+  background-color: #bb800926;
+  color: #f0f6fc;
 }
 
 body small {
@@ -113,7 +113,6 @@ body img {
   border-style: none;
   max-width: 100%;
   box-sizing: content-box;
-  background-color: #0d1117;
 }
 
 body code,
@@ -125,18 +124,18 @@ body samp {
 }
 
 body figure {
-  margin: 1em 40px;
+  margin: 1em 2.5rem;
 }
 
 body hr {
   box-sizing: content-box;
   overflow: hidden;
   background: transparent;
-  border-bottom: 1px solid #21262d;
+  border-bottom: 1px solid #3d444db3;
   height: .25em;
   padding: 0;
-  margin: 24px 0;
-  background-color: #30363d;
+  margin: 1.5rem 0;
+  background-color: #3d444d;
   border: 0;
 }
 
@@ -153,6 +152,7 @@ body [type=button],
 body [type=reset],
 body [type=submit] {
   -webkit-appearance: button;
+  appearance: button;
 }
 
 body [type=checkbox],
@@ -169,6 +169,7 @@ body [type=number]::-webkit-outer-spin-button {
 body [type=search]::-webkit-search-cancel-button,
 body [type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
+  appearance: none;
 }
 
 body ::-webkit-input-placeholder {
@@ -178,6 +179,7 @@ body ::-webkit-input-placeholder {
 
 body ::-webkit-file-upload-button {
   -webkit-appearance: button;
+  appearance: button;
   font: inherit;
 }
 
@@ -186,7 +188,7 @@ body a:hover {
 }
 
 body ::placeholder {
-  color: #6e7681;
+  color: #9198a1;
   opacity: 1;
 }
 
@@ -208,6 +210,7 @@ body table {
   width: max-content;
   max-width: 100%;
   overflow: auto;
+  font-variant: tabular-nums;
 }
 
 body td,
@@ -219,15 +222,11 @@ body details summary {
   cursor: pointer;
 }
 
-body details:not([open])>*:not(summary) {
-  display: none !important;
-}
-
 body a:focus,
 body [role=button]:focus,
 body input[type=radio]:focus,
 body input[type=checkbox]:focus {
-  outline: 2px solid #2f81f7;
+  outline: 2px solid #1f6feb;
   outline-offset: -2px;
   box-shadow: none;
 }
@@ -243,7 +242,7 @@ body a:focus-visible,
 body [role=button]:focus-visible,
 body input[type=radio]:focus-visible,
 body input[type=checkbox]:focus-visible {
-  outline: 2px solid #2f81f7;
+  outline: 2px solid #1f6feb;
   outline-offset: -2px;
   box-shadow: none;
 }
@@ -259,16 +258,16 @@ body input[type=checkbox]:focus-visible {
 
 body kbd {
   display: inline-block;
-  padding: 3px 5px;
-  font: 11px ui-monospace,SFMono-Regular,SF Mono,Menlo,Consolas,Liberation Mono,monospace;
+  padding: 0.25rem;
+  font: 11px ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
   line-height: 10px;
-  color: #e6edf3;
+  color: #f0f6fc;
   vertical-align: middle;
-  background-color: #161b22;
-  border: solid 1px rgba(110,118,129,0.4);
-  border-bottom-color: rgba(110,118,129,0.4);
+  background-color: #151b23;
+  border: solid 1px #3d444db3;
+  border-bottom-color: #3d444db3;
   border-radius: 6px;
-  box-shadow: inset 0 -1px 0 rgba(110,118,129,0.4);
+  box-shadow: inset 0 -1px 0 #3d444db3;
 }
 
 body h1,
@@ -277,8 +276,8 @@ body h3,
 body h4,
 body h5,
 body h6 {
-  margin-top: 24px;
-  margin-bottom: 16px;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
   font-weight: 600;
   line-height: 1.25;
 }
@@ -287,7 +286,7 @@ body h2 {
   font-weight: 600;
   padding-bottom: .3em;
   font-size: 1.5em;
-  border-bottom: 1px solid #21262d;
+  border-bottom: 1px solid #3d444db3;
 }
 
 body h3 {
@@ -308,7 +307,7 @@ body h5 {
 body h6 {
   font-weight: 600;
   font-size: .85em;
-  color: #7d8590;
+  color: #9198a1;
 }
 
 body p {
@@ -319,8 +318,8 @@ body p {
 body blockquote {
   margin: 0;
   padding: 0 1em;
-  color: #7d8590;
-  border-left: .25em solid #30363d;
+  color: #9198a1;
+  border-left: .25em solid #3d444d;
 }
 
 body ul,
@@ -349,14 +348,14 @@ body dd {
 body tt,
 body code,
 body samp {
-  font-family: ui-monospace,SFMono-Regular,SF Mono,Menlo,Consolas,Liberation Mono,monospace;
+  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
   font-size: 12px;
 }
 
 body pre {
   margin-top: 0;
   margin-bottom: 0;
-  font-family: ui-monospace,SFMono-Regular,SF Mono,Menlo,Consolas,Liberation Mono,monospace;
+  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
   font-size: 12px;
   word-wrap: normal;
 }
@@ -371,36 +370,11 @@ body .octicon {
 body input::-webkit-outer-spin-button,
 body input::-webkit-inner-spin-button {
   margin: 0;
-  -webkit-appearance: none;
   appearance: none;
 }
 
-body .color-fg-accent {
-  color: #2f81f7 !important;
-}
-
-body .color-fg-attention {
-  color: #d29922 !important;
-}
-
-body .color-fg-done {
-  color: #a371f7 !important;
-}
-
-body .flex-items-center {
-  align-items: center !important;
-}
-
-body .mb-1 {
-  margin-bottom: var(--base-size-4, 4px) !important;
-}
-
-body .text-semibold {
-  font-weight: var(--base-text-weight-medium, 500) !important;
-}
-
-body .d-inline-flex {
-  display: inline-flex !important;
+body .mr-2 {
+  margin-right: 0.5rem !important;
 }
 
 body::before {
@@ -433,7 +407,7 @@ body .absent {
 
 body .anchor {
   float: left;
-  padding-right: 4px;
+  padding-right: 0.25rem;
   margin-left: -20px;
   line-height: 1;
 }
@@ -451,7 +425,7 @@ body table,
 body pre,
 body details {
   margin-top: 0;
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
 }
 
 body blockquote>:first-child {
@@ -468,7 +442,7 @@ body h3 .octicon-link,
 body h4 .octicon-link,
 body h5 .octicon-link,
 body h6 .octicon-link {
-  color: #e6edf3;
+  color: #f0f6fc;
   vertical-align: middle;
   visibility: hidden;
 }
@@ -570,7 +544,7 @@ body ol ul {
 }
 
 body li>p {
-  margin-top: 16px;
+  margin-top: 1rem;
 }
 
 body li+li {
@@ -583,15 +557,15 @@ body dl {
 
 body dl dt {
   padding: 0;
-  margin-top: 16px;
+  margin-top: 1rem;
   font-size: 1em;
   font-style: italic;
   font-weight: 600;
 }
 
 body dl dd {
-  padding: 0 16px;
-  margin-bottom: 16px;
+  padding: 0 1rem;
+  margin-bottom: 1rem;
 }
 
 body table th {
@@ -601,7 +575,7 @@ body table th {
 body table th,
 body table td {
   padding: 6px 13px;
-  border: 1px solid #30363d;
+  border: 1px solid #3d444d;
 }
 
 body table td>:last-child {
@@ -610,11 +584,11 @@ body table td>:last-child {
 
 body table tr {
   background-color: #0d1117;
-  border-top: 1px solid #21262d;
+  border-top: 1px solid #3d444db3;
 }
 
 body table tr:nth-child(2n) {
-  background-color: #161b22;
+  background-color: #151b23;
 }
 
 body table img {
@@ -647,7 +621,7 @@ body span.frame>span {
   padding: 7px;
   margin: 13px 0 0;
   overflow: hidden;
-  border: 1px solid #30363d;
+  border: 1px solid #3d444d;
 }
 
 body span.frame span img {
@@ -659,7 +633,7 @@ body span.frame span span {
   display: block;
   padding: 5px 0 0;
   clear: both;
-  color: #e6edf3;
+  color: #f0f6fc;
 }
 
 body span.align-center {
@@ -729,7 +703,7 @@ body tt {
   margin: 0;
   font-size: 85%;
   white-space: break-spaces;
-  background-color: rgba(110,118,129,0.4);
+  background-color: #656c7633;
   border-radius: 6px;
 }
 
@@ -760,7 +734,7 @@ body pre>code {
 }
 
 body .highlight {
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
 }
 
 body .highlight pre {
@@ -770,12 +744,12 @@ body .highlight pre {
 
 body .highlight pre,
 body pre {
-  padding: 16px;
+  padding: 1rem;
   overflow: auto;
   font-size: 85%;
   line-height: 1.45;
-  color: #e6edf3;
-  background-color: #161b22;
+  color: #f0f6fc;
+  background-color: #151b23;
   border-radius: 6px;
 }
 
@@ -803,7 +777,7 @@ body .csv-data th {
 }
 
 body .csv-data .blob-num {
-  padding: 10px 8px 9px;
+  padding: 10px 0.5rem 9px;
   text-align: right;
   background: #0d1117;
   border: 0;
@@ -815,7 +789,7 @@ body .csv-data tr {
 
 body .csv-data th {
   font-weight: 600;
-  background: #161b22;
+  background: #151b23;
   border-top: 0;
 }
 
@@ -829,18 +803,18 @@ body [data-footnote-ref]::after {
 
 body .footnotes {
   font-size: 12px;
-  color: #7d8590;
-  border-top: 1px solid #30363d;
+  color: #9198a1;
+  border-top: 1px solid #3d444d;
 }
 
 body .footnotes ol {
-  padding-left: 16px;
+  padding-left: 1rem;
 }
 
 body .footnotes ol ul {
   display: inline-block;
-  padding-left: 16px;
-  margin-top: 16px;
+  padding-left: 1rem;
+  margin-top: 1rem;
 }
 
 body .footnotes li {
@@ -849,10 +823,10 @@ body .footnotes li {
 
 body .footnotes li:target::before {
   position: absolute;
-  top: -8px;
-  right: -8px;
-  bottom: -8px;
-  left: -24px;
+  top: calc(0.5rem*-1);
+  right: calc(0.5rem*-1);
+  bottom: calc(0.5rem*-1);
+  left: calc(1.5rem*-1);
   pointer-events: none;
   content: "";
   border: 2px solid #1f6feb;
@@ -860,15 +834,19 @@ body .footnotes li:target::before {
 }
 
 body .footnotes li:target {
-  color: #e6edf3;
+  color: #f0f6fc;
 }
 
 body .footnotes .data-footnote-backref g-emoji {
   font-family: monospace;
 }
 
+body body:has(:modal) {
+  padding-right: var(--dialog-scrollgutter) !important;
+}
+
 body .pl-c {
-  color: #8b949e;
+  color: #9198a1;
 }
 
 body .pl-c1,
@@ -883,7 +861,7 @@ body .pl-en {
 
 body .pl-smi,
 body .pl-s .pl-s1 {
-  color: #c9d1d9;
+  color: #f0f6fc;
 }
 
 body .pl-ent {
@@ -941,12 +919,12 @@ body .pl-ms {
 
 body .pl-mi {
   font-style: italic;
-  color: #c9d1d9;
+  color: #f0f6fc;
 }
 
 body .pl-mb {
   font-weight: bold;
-  color: #c9d1d9;
+  color: #f0f6fc;
 }
 
 body .pl-md {
@@ -965,7 +943,7 @@ body .pl-mc {
 }
 
 body .pl-mi2 {
-  color: #c9d1d9;
+  color: #f0f6fc;
   background-color: #1158c7;
 }
 
@@ -975,16 +953,30 @@ body .pl-mdr {
 }
 
 body .pl-ba {
-  color: #8b949e;
+  color: #9198a1;
 }
 
 body .pl-sg {
-  color: #484f58;
+  color: #3d444d;
 }
 
 body .pl-corl {
   text-decoration: underline;
   color: #a5d6ff;
+}
+
+body [role=button]:focus:not(:focus-visible),
+body [role=tabpanel][tabindex="0"]:focus:not(:focus-visible),
+body button:focus:not(:focus-visible),
+body summary:focus:not(:focus-visible),
+body a:focus:not(:focus-visible) {
+  outline: none;
+  box-shadow: none;
+}
+
+body [tabindex="0"]:focus:not(:focus-visible),
+body details-dialog:focus:not(:focus-visible) {
+  outline: none;
 }
 
 body g-emoji {
@@ -1016,7 +1008,7 @@ body .task-list-item.enabled label {
 }
 
 body .task-list-item+.task-list-item {
-  margin-top: 4px;
+  margin-top: 0.25rem;
 }
 
 body .task-list-item .handle {
@@ -1028,12 +1020,12 @@ body .task-list-item-checkbox {
   vertical-align: middle;
 }
 
-body .contains-task-list:dir(rtl) .task-list-item-checkbox {
+body ul:dir(rtl) .task-list-item-checkbox {
   margin: 0 -1.6em .25em .2em;
 }
 
-body .contains-task-list {
-  position: relative;
+body ol:dir(rtl) .task-list-item-checkbox {
+  margin: 0 -1.6em .25em .2em;
 }
 
 body .contains-task-list:hover .task-list-item-convert-container,
@@ -1045,23 +1037,15 @@ body .contains-task-list:focus-within .task-list-item-convert-container {
   clip: auto;
 }
 
-body .QueryBuilder .qb-entity {
-  color: #d2a8ff;
-}
-
-body .QueryBuilder .qb-constant {
-  color: #79c0ff;
-}
-
 body ::-webkit-calendar-picker-indicator {
   filter: invert(50%);
 }
 
 body .markdown-alert {
-  padding: 0 1em;
-  margin-bottom: 16px;
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
   color: inherit;
-  border-left: .25em solid #30363d;
+  border-left: .25em solid #3d444d;
 }
 
 body .markdown-alert>:first-child {
@@ -1072,14 +1056,58 @@ body .markdown-alert>:last-child {
   margin-bottom: 0;
 }
 
+body .markdown-alert .markdown-alert-title {
+  display: flex;
+  font-weight: 500;
+  align-items: center;
+  line-height: 1;
+}
+
 body .markdown-alert.markdown-alert-note {
-  border-left-color: #2f81f7;
+  border-left-color: #1f6feb;
+}
+
+body .markdown-alert.markdown-alert-note .markdown-alert-title {
+  color: #4493f8;
 }
 
 body .markdown-alert.markdown-alert-important {
-  border-left-color: #a371f7;
+  border-left-color: #8957e5;
+}
+
+body .markdown-alert.markdown-alert-important .markdown-alert-title {
+  color: #ab7df8;
 }
 
 body .markdown-alert.markdown-alert-warning {
-  border-left-color: #d29922;
+  border-left-color: #9e6a03;
 }
+
+body .markdown-alert.markdown-alert-warning .markdown-alert-title {
+  color: #d29922;
+}
+
+body .markdown-alert.markdown-alert-tip {
+  border-left-color: #238636;
+}
+
+body .markdown-alert.markdown-alert-tip .markdown-alert-title {
+  color: #3fb950;
+}
+
+body .markdown-alert.markdown-alert-caution {
+  border-left-color: #da3633;
+}
+
+body .markdown-alert.markdown-alert-caution .markdown-alert-title {
+  color: #f85149;
+}
+
+body>*:first-child>.heading-element:first-child {
+  margin-top: 0 !important;
+}
+
+body .highlight pre:has(+.zeroclipboard-container) {
+  min-height: 52px;
+}
+
