--- a/Stylesheets/GitHub light.css
+++ b/Stylesheets/GitHub light.css
@@ -1,10 +1,10 @@
-/*light*/
-
+/* light */
 body {
+  color-scheme: light;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   margin: 0;
-  color: #1F2328;
+  color: #1f2328;
   background-color: #ffffff;
   font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Noto Sans",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
   font-size: 16px;
@@ -13,8 +13,9 @@ body {
 }
 
 body {
+  box-sizing: border-box;
   margin: 32px;
-  padding: 16px 32px 32px 32px;
+  padding: 45px;
   border: 1px solid #d0d7de;
   border-radius: 6px;
 }
@@ -80,12 +81,12 @@ body h1 {
   font-weight: 600;
   padding-bottom: .3em;
   font-size: 2em;
-  border-bottom: 1px solid hsla(210,18%,87%,1);
+  border-bottom: 1px solid #d1d9e0b3;
 }
 
 body mark {
   background-color: #fff8c5;
-  color: #1F2328;
+  color: #1f2328;
 }
 
 body small {
@@ -112,7 +113,6 @@ body img {
   border-style: none;
   max-width: 100%;
   box-sizing: content-box;
-  background-color: #ffffff;
 }
 
 body code,
@@ -124,18 +124,18 @@ body samp {
 }
 
 body figure {
-  margin: 1em 40px;
+  margin: 1em 2.5rem;
 }
 
 body hr {
   box-sizing: content-box;
   overflow: hidden;
   background: transparent;
-  border-bottom: 1px solid hsla(210,18%,87%,1);
+  border-bottom: 1px solid #d1d9e0b3;
   height: .25em;
   padding: 0;
-  margin: 24px 0;
-  background-color: #d0d7de;
+  margin: 1.5rem 0;
+  background-color: #d1d9e0;
   border: 0;
 }
 
@@ -152,6 +152,7 @@ body [type=button],
 body [type=reset],
 body [type=submit] {
   -webkit-appearance: button;
+  appearance: button;
 }
 
 body [type=checkbox],
@@ -168,6 +169,7 @@ body [type=number]::-webkit-outer-spin-button {
 body [type=search]::-webkit-search-cancel-button,
 body [type=search]::-webkit-search-decoration {
   -webkit-appearance: none;
+  appearance: none;
 }
 
 body ::-webkit-input-placeholder {
@@ -177,6 +179,7 @@ body ::-webkit-input-placeholder {
 
 body ::-webkit-file-upload-button {
   -webkit-appearance: button;
+  appearance: button;
   font: inherit;
 }
 
@@ -185,7 +188,7 @@ body a:hover {
 }
 
 body ::placeholder {
-  color: #6e7781;
+  color: #59636e;
   opacity: 1;
 }
 
@@ -207,6 +210,7 @@ body table {
   width: max-content;
   max-width: 100%;
   overflow: auto;
+  font-variant: tabular-nums;
 }
 
 body td,
@@ -216,10 +220,6 @@ body th {
 
 body details summary {
   cursor: pointer;
-}
-
-body details:not([open])>*:not(summary) {
-  display: none !important;
 }
 
 body a:focus,
@@ -258,16 +258,16 @@ body input[type=checkbox]:focus-visible {
 
 body kbd {
   display: inline-block;
-  padding: 3px 5px;
-  font: 11px ui-monospace,SFMono-Regular,SF Mono,Menlo,Consolas,Liberation Mono,monospace;
+  padding: 0.25rem;
+  font: 11px ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
   line-height: 10px;
-  color: #1F2328;
+  color: #1f2328;
   vertical-align: middle;
   background-color: #f6f8fa;
-  border: solid 1px rgba(175,184,193,0.2);
-  border-bottom-color: rgba(175,184,193,0.2);
+  border: solid 1px #d1d9e0b3;
+  border-bottom-color: #d1d9e0b3;
   border-radius: 6px;
-  box-shadow: inset 0 -1px 0 rgba(175,184,193,0.2);
+  box-shadow: inset 0 -1px 0 #d1d9e0b3;
 }
 
 body h1,
@@ -276,8 +276,8 @@ body h3,
 body h4,
 body h5,
 body h6 {
-  margin-top: 24px;
-  margin-bottom: 16px;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
   font-weight: 600;
   line-height: 1.25;
 }
@@ -286,7 +286,7 @@ body h2 {
   font-weight: 600;
   padding-bottom: .3em;
   font-size: 1.5em;
-  border-bottom: 1px solid hsla(210,18%,87%,1);
+  border-bottom: 1px solid #d1d9e0b3;
 }
 
 body h3 {
@@ -307,7 +307,7 @@ body h5 {
 body h6 {
   font-weight: 600;
   font-size: .85em;
-  color: #656d76;
+  color: #59636e;
 }
 
 body p {
@@ -318,8 +318,8 @@ body p {
 body blockquote {
   margin: 0;
   padding: 0 1em;
-  color: #656d76;
-  border-left: .25em solid #d0d7de;
+  color: #59636e;
+  border-left: .25em solid #d1d9e0;
 }
 
 body ul,
@@ -348,14 +348,14 @@ body dd {
 body tt,
 body code,
 body samp {
-  font-family: ui-monospace,SFMono-Regular,SF Mono,Menlo,Consolas,Liberation Mono,monospace;
+  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
   font-size: 12px;
 }
 
 body pre {
   margin-top: 0;
   margin-bottom: 0;
-  font-family: ui-monospace,SFMono-Regular,SF Mono,Menlo,Consolas,Liberation Mono,monospace;
+  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
   font-size: 12px;
   word-wrap: normal;
 }
@@ -370,36 +370,11 @@ body .octicon {
 body input::-webkit-outer-spin-button,
 body input::-webkit-inner-spin-button {
   margin: 0;
-  -webkit-appearance: none;
   appearance: none;
 }
 
-body .color-fg-accent {
-  color: #0969da !important;
-}
-
-body .color-fg-attention {
-  color: #9a6700 !important;
-}
-
-body .color-fg-done {
-  color: #8250df !important;
-}
-
-body .flex-items-center {
-  align-items: center !important;
-}
-
-body .mb-1 {
-  margin-bottom: var(--base-size-4, 4px) !important;
-}
-
-body .text-semibold {
-  font-weight: var(--base-text-weight-medium, 500) !important;
-}
-
-body .d-inline-flex {
-  display: inline-flex !important;
+body .mr-2 {
+  margin-right: 0.5rem !important;
 }
 
 body::before {
@@ -432,7 +407,7 @@ body .absent {
 
 body .anchor {
   float: left;
-  padding-right: 4px;
+  padding-right: 0.25rem;
   margin-left: -20px;
   line-height: 1;
 }
@@ -450,7 +425,7 @@ body table,
 body pre,
 body details {
   margin-top: 0;
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
 }
 
 body blockquote>:first-child {
@@ -467,7 +442,7 @@ body h3 .octicon-link,
 body h4 .octicon-link,
 body h5 .octicon-link,
 body h6 .octicon-link {
-  color: #1F2328;
+  color: #1f2328;
   vertical-align: middle;
   visibility: hidden;
 }
@@ -569,7 +544,7 @@ body ol ul {
 }
 
 body li>p {
-  margin-top: 16px;
+  margin-top: 1rem;
 }
 
 body li+li {
@@ -582,15 +557,15 @@ body dl {
 
 body dl dt {
   padding: 0;
-  margin-top: 16px;
+  margin-top: 1rem;
   font-size: 1em;
   font-style: italic;
   font-weight: 600;
 }
 
 body dl dd {
-  padding: 0 16px;
-  margin-bottom: 16px;
+  padding: 0 1rem;
+  margin-bottom: 1rem;
 }
 
 body table th {
@@ -600,7 +575,7 @@ body table th {
 body table th,
 body table td {
   padding: 6px 13px;
-  border: 1px solid #d0d7de;
+  border: 1px solid #d1d9e0;
 }
 
 body table td>:last-child {
@@ -609,7 +584,7 @@ body table td>:last-child {
 
 body table tr {
   background-color: #ffffff;
-  border-top: 1px solid hsla(210,18%,87%,1);
+  border-top: 1px solid #d1d9e0b3;
 }
 
 body table tr:nth-child(2n) {
@@ -646,7 +621,7 @@ body span.frame>span {
   padding: 7px;
   margin: 13px 0 0;
   overflow: hidden;
-  border: 1px solid #d0d7de;
+  border: 1px solid #d1d9e0;
 }
 
 body span.frame span img {
@@ -658,7 +633,7 @@ body span.frame span span {
   display: block;
   padding: 5px 0 0;
   clear: both;
-  color: #1F2328;
+  color: #1f2328;
 }
 
 body span.align-center {
@@ -728,7 +703,7 @@ body tt {
   margin: 0;
   font-size: 85%;
   white-space: break-spaces;
-  background-color: rgba(175,184,193,0.2);
+  background-color: #818b981f;
   border-radius: 6px;
 }
 
@@ -759,7 +734,7 @@ body pre>code {
 }
 
 body .highlight {
-  margin-bottom: 16px;
+  margin-bottom: 1rem;
 }
 
 body .highlight pre {
@@ -769,11 +744,11 @@ body .highlight pre {
 
 body .highlight pre,
 body pre {
-  padding: 16px;
+  padding: 1rem;
   overflow: auto;
   font-size: 85%;
   line-height: 1.45;
-  color: #1F2328;
+  color: #1f2328;
   background-color: #f6f8fa;
   border-radius: 6px;
 }
@@ -802,7 +777,7 @@ body .csv-data th {
 }
 
 body .csv-data .blob-num {
-  padding: 10px 8px 9px;
+  padding: 10px 0.5rem 9px;
   text-align: right;
   background: #ffffff;
   border: 0;
@@ -828,18 +803,18 @@ body [data-footnote-ref]::after {
 
 body .footnotes {
   font-size: 12px;
-  color: #656d76;
-  border-top: 1px solid #d0d7de;
+  color: #59636e;
+  border-top: 1px solid #d1d9e0;
 }
 
 body .footnotes ol {
-  padding-left: 16px;
+  padding-left: 1rem;
 }
 
 body .footnotes ol ul {
   display: inline-block;
-  padding-left: 16px;
-  margin-top: 16px;
+  padding-left: 1rem;
+  margin-top: 1rem;
 }
 
 body .footnotes li {
@@ -848,10 +823,10 @@ body .footnotes li {
 
 body .footnotes li:target::before {
   position: absolute;
-  top: -8px;
-  right: -8px;
-  bottom: -8px;
-  left: -24px;
+  top: calc(0.5rem*-1);
+  right: calc(0.5rem*-1);
+  bottom: calc(0.5rem*-1);
+  left: calc(1.5rem*-1);
   pointer-events: none;
   content: "";
   border: 2px solid #0969da;
@@ -859,15 +834,19 @@ body .footnotes li:target::before {
 }
 
 body .footnotes li:target {
-  color: #1F2328;
+  color: #1f2328;
 }
 
 body .footnotes .data-footnote-backref g-emoji {
   font-family: monospace;
 }
 
+body body:has(:modal) {
+  padding-right: var(--dialog-scrollgutter) !important;
+}
+
 body .pl-c {
-  color: #6e7781;
+  color: #59636e;
 }
 
 body .pl-c1,
@@ -882,11 +861,11 @@ body .pl-en {
 
 body .pl-smi,
 body .pl-s .pl-s1 {
-  color: #24292f;
+  color: #1f2328;
 }
 
 body .pl-ent {
-  color: #116329;
+  color: #0550ae;
 }
 
 body .pl-k {
@@ -940,12 +919,12 @@ body .pl-ms {
 
 body .pl-mi {
   font-style: italic;
-  color: #24292f;
+  color: #1f2328;
 }
 
 body .pl-mb {
   font-weight: bold;
-  color: #24292f;
+  color: #1f2328;
 }
 
 body .pl-md {
@@ -964,7 +943,7 @@ body .pl-mc {
 }
 
 body .pl-mi2 {
-  color: #eaeef2;
+  color: #d1d9e0;
   background-color: #0550ae;
 }
 
@@ -974,16 +953,30 @@ body .pl-mdr {
 }
 
 body .pl-ba {
-  color: #57606a;
+  color: #59636e;
 }
 
 body .pl-sg {
-  color: #8c959f;
+  color: #818b98;
 }
 
 body .pl-corl {
   text-decoration: underline;
   color: #0a3069;
+}
+
+body [role=button]:focus:not(:focus-visible),
+body [role=tabpanel][tabindex="0"]:focus:not(:focus-visible),
+body button:focus:not(:focus-visible),
+body summary:focus:not(:focus-visible),
+body a:focus:not(:focus-visible) {
+  outline: none;
+  box-shadow: none;
+}
+
+body [tabindex="0"]:focus:not(:focus-visible),
+body details-dialog:focus:not(:focus-visible) {
+  outline: none;
 }
 
 body g-emoji {
@@ -1015,7 +1008,7 @@ body .task-list-item.enabled label {
 }
 
 body .task-list-item+.task-list-item {
-  margin-top: 4px;
+  margin-top: 0.25rem;
 }
 
 body .task-list-item .handle {
@@ -1027,12 +1020,12 @@ body .task-list-item-checkbox {
   vertical-align: middle;
 }
 
-body .contains-task-list:dir(rtl) .task-list-item-checkbox {
+body ul:dir(rtl) .task-list-item-checkbox {
   margin: 0 -1.6em .25em .2em;
 }
 
-body .contains-task-list {
-  position: relative;
+body ol:dir(rtl) .task-list-item-checkbox {
+  margin: 0 -1.6em .25em .2em;
 }
 
 body .contains-task-list:hover .task-list-item-convert-container,
@@ -1044,23 +1037,15 @@ body .contains-task-list:focus-within .task-list-item-convert-container {
   clip: auto;
 }
 
-body .QueryBuilder .qb-entity {
-  color: #6639ba;
-}
-
-body .QueryBuilder .qb-constant {
-  color: #0550ae;
-}
-
 body ::-webkit-calendar-picker-indicator {
   filter: invert(50%);
 }
 
 body .markdown-alert {
-  padding: 0 1em;
-  margin-bottom: 16px;
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
   color: inherit;
-  border-left: .25em solid #d0d7de;
+  border-left: .25em solid #d1d9e0;
 }
 
 body .markdown-alert>:first-child {
@@ -1071,14 +1056,58 @@ body .markdown-alert>:last-child {
   margin-bottom: 0;
 }
 
+body .markdown-alert .markdown-alert-title {
+  display: flex;
+  font-weight: 500;
+  align-items: center;
+  line-height: 1;
+}
+
 body .markdown-alert.markdown-alert-note {
   border-left-color: #0969da;
+}
+
+body .markdown-alert.markdown-alert-note .markdown-alert-title {
+  color: #0969da;
 }
 
 body .markdown-alert.markdown-alert-important {
   border-left-color: #8250df;
 }
 
+body .markdown-alert.markdown-alert-important .markdown-alert-title {
+  color: #8250df;
+}
+
 body .markdown-alert.markdown-alert-warning {
   border-left-color: #9a6700;
 }
+
+body .markdown-alert.markdown-alert-warning .markdown-alert-title {
+  color: #9a6700;
+}
+
+body .markdown-alert.markdown-alert-tip {
+  border-left-color: #1a7f37;
+}
+
+body .markdown-alert.markdown-alert-tip .markdown-alert-title {
+  color: #1a7f37;
+}
+
+body .markdown-alert.markdown-alert-caution {
+  border-left-color: #cf222e;
+}
+
+body .markdown-alert.markdown-alert-caution .markdown-alert-title {
+  color: #d1242f;
+}
+
+body>*:first-child>.heading-element:first-child {
+  margin-top: 0 !important;
+}
+
+body .highlight pre:has(+.zeroclipboard-container) {
+  min-height: 52px;
+}
+
